--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: PayTren Wasilah Sukses
+title: PayTren
 subTitle: Transaksi Cerdas Bernilai Sedekah | Peluang Bisnis | Fintech Syariah
 ---
